fix: remove alias, add field image for stores and change return get all evaluations
